--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,188 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Josefin San", sans-serif;
+}
+:root {
+  --main-bg: #fff3f5;
+  --arrow-color: #ffbac1;
+  --number-bg: #ff4957;
+  --white: #fff;
+  --reset-bg: #231f20;
+  --reset-hover: #231f20b6;
+}
+
+.counter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 2.5rem;
+}
+.arrow {
+  color: var(--arrow-color);
+  background: transparent;
+  font-size: 3rem;
+  padding: 0.5rem;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+.arrow:hover {
+  color: var(--number-bg);
+}
+.arrow:active {
+  animation: dash 0.3s linear;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.6;
+}
+ul {
+  list-style: none;
+  /* display: flex; */
+}
+ul li {
+  padding: 5px;
+  background: #f4f4f4;
+  margin: 5px 0;
+}
+table,
+th,
+td {
+  border: 1px solid green;
+}
+footer {
+  text-align: center;
+}
+h2 {
+  text-align: center;
+  /* color:; */
+}
+.active {
+  background-color: #04aa6d;
+  color: white;
+  padding: 15px;
+}
+a {
+  text-decoration: none;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  color: black;
+  margin: 5px;
+}
+header {
+  background: #f4f4f4;
+  padding: 1rem;
+  /* text-align: center; */
+  flex-direction: row;
+  display: flex;
+  justify-content: space-around;
+}
+.container {
+  margin: auto;
+  width: 700px;
+  overflow: auto;
+  padding: 3rem 2rem;
+}
+
+.text {
+  text-align: center;
+}
+
+#my-form {
+  padding: 2rem;
+  background: #f4f4f4;
+}
+#my-form label {
+  display: block;
+}
+.gender,
+.courses,
+#inline {
+  display: inline-block !important;
+}
+#my-form input[type="text"],
+input[type="number"],
+input[type="password"],
+select {
+  width: 80%;
+  height: 5%;
+  padding: 8px;
+  margin-bottom: 0px;
+  border-radius: 5px;
+  border: 1px solid rgb(78, 113, 189);
+}
+.btnn {
+  /* display: block; */
+  width: 100%;
+  /* padding: 10px 15px; */
+  border: 0;
+  color: #fff;
+  border-radius: 5px;
+  margin: 5px 0;
+}
+.btnn:hover {
+  background: #444;
+}
+.bg-dark {
+  background: #333;
+  color: #fff;
+}
+.error {
+  background: orangered;
+  color: #fff;
+  padding: 5px;
+  margin: 5px;
+}
+@keyframes dash {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.value {
+  color: var(--white);
+  background: var(--number-bg);
+  font-size: 5rem;
+  font-weight: 500;
+  padding: 1.5rem 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+}
+.reset {
+  width: 100%;
+  color: var(--white);
+  background: var(--reset-bg);
+  font-size: 1.2rem;
+  padding: 1rem 1.5rem;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+.reset:hover {
+  background: var(--reset-hover);
+  box-shadow: 0 0.1rem 0.1rem 0 rgba(0, 0, 0, 0.2);
+}
+.reset:active {
+  transform: scale(1.05) translateY(10px);
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -26,6 +205,13 @@
 
 .App-link {
   color: #61dafb;
+}
+.fa-trash,
+.fa-pencil-square-o {
+  color: rgb(247, 247, 247);
+}
+.btn-sm {
+  margin-right: 3px;
 }
 
 @keyframes App-logo-spin {
